[gd_scene load_steps=18 format=3 uid="uid://dxeo28dt7rcfy"]

[ext_resource type="Script" path="res://assets/packs/longasstimeago/actors/trex/scripts/trex.gd" id="1_p4hwq"]
[ext_resource type="Script" path="res://modules/physics_interpolation/scripts/physics_interpolation_2d.gd" id="2_oijdb"]
[ext_resource type="PackedScene" uid="uid://wfxjtpx2daw7" path="res://tools/hit/hit_take_2d.tscn" id="3_p21pe"]
[ext_resource type="Script" path="res://modules/input_relay/scripts/input_relay.gd" id="3_ujtrx"]
[ext_resource type="Texture2D" uid="uid://csuw44wlxsupr" path="res://assets/packs/longasstimeago/actors/trex/textures/trex_diffuse.png" id="5_4fcqo"]
[ext_resource type="PackedScene" uid="uid://e13mlq61dlgl" path="res://tools/treadmill/treadmill_cast_2d.tscn" id="5_mxvi3"]
[ext_resource type="AnimationLibrary" uid="uid://uxuac7bbvp0d" path="res://assets/packs/longasstimeago/actors/trex/animations/trex.tres" id="5_opegp"]
[ext_resource type="AudioStream" uid="uid://07oqp6fwjtru" path="res://assets/packs/longasstimeago/actors/trex/sounds/jump.mp3" id="6_qq8bi"]
[ext_resource type="AudioStream" uid="uid://nqacerhy8i8y" path="res://assets/packs/longasstimeago/actors/trex/sounds/dead.mp3" id="7_racpd"]
[ext_resource type="Texture2D" uid="uid://cxhrn4tycy0bc" path="res://icon.svg" id="8_i5sdg"]
[ext_resource type="PackedScene" uid="uid://hyh6vm0mq8et" path="res://tools/game/game_actor.tscn" id="9_4nyh6"]

[sub_resource type="Curve" id="Curve_g4e11"]
_data = [Vector2(0.0824742, 0), 0.0, 17.2558, 0, 0, Vector2(0.144414, 0.471489), 2.96354, 2.96354, 0, 0, Vector2(0.356948, 0.334213), -3.125, -3.25, 0, 0, Vector2(0.45283, 0.127907), 0.0, -0.0106255, 0, 1, Vector2(1, 0.122093), -0.0106255, 0.0, 1, 0]
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpsh7"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igi4c"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5d5sc"]
size = Vector2(14, 10)

[sub_resource type="Animation" id="Animation_7vb53"]
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("physics_interpolation_2d/sprite_2d:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("physics_interpolation_2d/sprite_2d:position")
tracks/1/interp = 0
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("physics_interpolation_2d/sprite_2d:offset")
tracks/2/interp = 0
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("physics_interpolation_2d/sprite_2d:rotation")
tracks/3/interp = 3
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hit_take_2d/collision_head:position")
tracks/4/interp = 0
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, -18)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hit_take_2d/collision_body:position")
tracks/5/interp = 0
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7tky"]
_data = {
"RESET": SubResource("Animation_7vb53")
}

[node name="trex" type="CharacterBody2D"]
velocity = Vector2(0, 29024.7)
slide_on_ceiling = false
safe_margin = 0.001
script = ExtResource("1_p4hwq")
gravity_scale = 1.5
jump_speed = 256.0
jump_hold_speed = 32.0
jump_hold_curve = SubResource("Curve_g4e11")
jump_hold_time = 0.4
jump_cooldown_time = 0.01
flop_speed = 720.0

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_xpsh7")

[node name="physics_interpolation_2d" type="Node2D" parent="."]
script = ExtResource("2_oijdb")

[node name="sprite_2d" type="Sprite2D" parent="physics_interpolation_2d"]
texture = ExtResource("5_4fcqo")
offset = Vector2(0, -12)
hframes = 8
vframes = 8

[node name="hit_take_2d" parent="." instance=ExtResource("3_p21pe")]

[node name="collision_head" type="CollisionShape2D" parent="hit_take_2d"]
position = Vector2(7, -18)
shape = SubResource("RectangleShape2D_igi4c")

[node name="collision_body" type="CollisionShape2D" parent="hit_take_2d"]
position = Vector2(-1, -9)
shape = SubResource("RectangleShape2D_5d5sc")

[node name="treadmill_cast_2d" parent="." instance=ExtResource("5_mxvi3")]

[node name="audio_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qq8bi")

[node name="audio_dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_racpd")

[node name="animation_player" type="AnimationPlayer" parent="."]
callback_mode_process = 0
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_d7tky"),
"trex_default": ExtResource("5_opegp")
}

[node name="input_relay" type="Node" parent="."]
script = ExtResource("3_ujtrx")

[node name="game_actor" parent="." instance=ExtResource("9_4nyh6")]

[node name="temporary" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = -510
texture = ExtResource("8_i5sdg")
